tests/NormalTests/paczka1/fuzzy1/31691302.err
Error in line 11: mEQG S563 -1,1
Error in line 9: 0qGY S563 97,2
Error in line 14: 0qGY A348 6,4
Error in line 10: tTOHtDKVh A348 56,9
Error in line 5: mEQG S563 29,1
Error in line 27: 0qGY A348 45,1
Error in line 30: tTOHtDKVh A667 91,6
